# boogle

./: .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  bench_index.py  benchmark_report.json  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 5b4c0bcaf37f_initial_schema.py  b4137bddfb3a_fix_seedoffset_columns.py
data/epubs/: 1.epub  metadata.json
docs/: DEVELOPMENT.md
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.tsx  index.css
frontend/src/pages/: BookDetails.tsx  Home.tsx
rust_bm25/: Cargo.toml  README.md  pyproject.toml
rust_bm25/docs/: README.md
rust_bm25/docs/index/: memory.md  ram.md  reader.md  realtime.md  segment.md  wal.md  writer.md
rust_bm25/docs/search/: searcher.md  wand.md
rust_bm25/src/: analysis.rs  encoding.rs  file_index.rs  lib.rs  memory_index.rs  parsers.rs  pipeline.rs  postgres_index.rs  search.rs  sqlite_index.rs
rust_bm25/src/analysis/: mod.rs
rust_bm25/src/codecs/: mod.rs
rust_bm25/src/document/: parsers.rs
rust_bm25/src/index/: memory.rs  mod.rs  postgres.rs  ram.rs  reader.rs  realtime.rs  segment.rs  sqlite.rs  wal.rs  writer.rs
rust_bm25/src/search/: mod.rs  searcher.rs  wand.rs
scripts/: analyze_ranking.py  benchmark.py  benchmark_files.py  db.py  enrich_metadata.py  manage_dumps.py  setup.sh  test_pipeline_isolated.py  verify_nrt.py
src/: pipeline.py
src/api/: main.py
src/db/: __init__.py  database.py  models.py
src/downloader/: downloader.py
src/enrichment/: __init__.py  openlibrary.py  schema.py  service.py
src/indexer/: bm25.py  pg_bm25.py  ranker.py  stopwords.py  storage.py
src/parser/: parser.py
src/scraper/: CodigoPegarLivros.py  categorias_filtradas.json  schema.sql  scraper.py
src/scraper/Codigo_antigo/: __init__.py  scraper.py
src/seed/: __init__.py  main.py  service.py
src/sources/: __init__.py  types.py
test_nrt_index/: index.json  index.wal
tests/: README_TEST.md  conftest.py  test_api.py  test_integration_pipeline.py  test_openlibrary_local.py  test_pipeline_enrichment.py  test_realtime_indexer.py
