[project]
name = "boogle"
version = "0.1.0"
description = "Boogle is an open-source meta search engine for free books."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "fastapi>=0.121.0",
    "requests>=2.32.5",
    "streamlit>=1.51.0",
    "uvicorn>=0.38.0",
    "pytest>=8.3.3",
    "httpx>=0.28.1",
]

[tool.pytest.ini_options]
pythonpath = [
    ".",
]
