[project]
name = "boogle"
version = "0.1.0"
description = "Boogle is an open-source meta search engine for free books."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "fastapi>=0.122.0",
    "psycopg[binary,pool]>=3.2.13",
    "requests>=2.32.5",
    "streamlit>=1.51.0",
    "uvicorn>=0.38.0",
    "pytest>=9.0.1",
    "httpx>=0.28.1",
    "ebooklib>=0.20",
]

[tool.pytest.ini_options]
pythonpath = [
    ".",
]
