[project]
name = "boogle"
version = "0.1.0"
description = "Boogle is an open-source meta search engine for free books."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "fastapi>=0.122.0",
    "psycopg[binary,pool]>=3.2.13",
    "requests>=2.32.5",
    "uvicorn>=0.38.0",
    "pytest>=9.0.1",
    "httpx>=0.28.1",
    "numpy>=2.3.4",
    "maturin>=1.10.2",
]

[project.scripts]
boogle = "src.pipeline:main"
boogle-db = "scripts.db:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = [
    ".",
]
