[package]
name = "rust_bm25"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_bm25"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.2", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rkyv = "0.8.12"
rayon = "1.11.0"
rustc-hash = "2.1.1"
zip = "6.0.0"
scraper = "0.25.0"
pdf-extract = "0.10.0"
rust-stemmers = "1.2"
once_cell = "1.19"
zstd = "0.13"
md5 = "0.8.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
glob = "0.3.3"
futures = "0.3"
memmap2 = "0.9"
fst = "0.4"
crossbeam-channel = "0.5"
dashmap = "6"
flume = "0.12.0"
deunicode = "1.6"
blake3 = "1.8"
simdutf8 = "0.1"
bumpalo = "3.19.1"

bitpacking = "0.9"

[profile.release]
panic = "abort"
strip = "symbols"
opt-level = 3
